<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/table_group_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background_7fb4ad"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_background"
        android:text="@string/camera"
        android:textSize="22sp" />


    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_background"
        android:text="@string/gallery"
        android:textSize="22sp" />


    <Button
        android:id="@+id/btn_storeHouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_background"
        android:text="@string/store_house"
        android:textSize="22sp" />

</LinearLayout>
