<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#80000000">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog_bg_noborder"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_delete_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/choice_belong_types"
            android:textColor="@color/text_light_black"
            android:textSize="15sp" />

        <include layout="@layout/divider"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_delete_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ok"
                android:textColor="@color/text_dark_grey"
                android:textSize="@dimen/text_size_19sp" />

            <include layout="@layout/divider_virtical"></include>

            <TextView
                android:id="@+id/tv_dialog_delete_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/text_dark_grey"
                android:textSize="@dimen/text_size_19sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>